# string-telephone

./: .travis.yml  Cargo.toml  LICENSE  README.md  build_docs.sh  client.rs  search-index.js  server.rs
gcc/: fn.compile_library.html  index.html  stability.html  stability.json  struct.Config.html
src/: client.rs  demo.rs  demo_client.rs  demo_server.rs  lib.rs  packet.rs  server.rs  shared.rs
src/demo/: demo_client.rs  demo_server.rs  demo_shared.rs
src/gcc/: lib.rs.html
src/string_telephone/: client.rs.html  lib.rs.html  packet.rs.html  server.rs.html  shared.rs.html
src/tests/: test_client.rs  test_server.rs  test_shared.rs
src/time/: lib.rs.html
string_telephone/: index.html  stability.html  stability.json
string_telephone/client/: enum.ConnectionState.html  enum.PollFailResult.html  index.html  struct.Client.html  struct.ClientConnectionConfig.html  type.ConnectionState.html  type.PollFailResult.html
string_telephone/packet/: enum.PacketType.html  enum.TaskCommand.html  index.html  struct.Packet.html  type.Command.html  type.PacketType.html
string_telephone/server/: enum.PacketOrCommand.html  index.html  struct.Server.html  struct.ServerManager.html  (+1 more)
tests/: lib.rs  test_client.rs  test_server.rs  test_shared.rs
time/: enum.ParseError.html  fn.at.html  fn.at_utc.html  fn.empty_tm.html  fn.get_time.html  fn.now.html  fn.now_utc.html  fn.precise_time_ns.html  fn.precise_time_s.html  fn.strftime.html  fn.strptime.html  fn.tzset.html  index.html  stability.html  stability.json  struct.Timespec.html  struct.Tm.html  struct.TmFmt.html
(+25 files in other folders)
