[package]

name = "string_telephone"
version = "0.0.1"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]

[lib]

name = "string_telephone"
path = "src/lib.rs"

[[bin]]

name = "demo_client"
path = "src/demo/demo_client.rs"

[[bin]]

name = "demo_server"
path = "src/demo/demo_server.rs"

[dependencies.time]
git = "https://github.com/rust-lang/time.git"
